force-app/main/default/objects/Account/fields/IFv2_InternalOrder__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InternalOrder__c</fullName>
    <description>Used in APM Workflow</description>
    <label>Internal Order</label>
    <length>12</length>
    <type>Text</type>
</CustomField>