force-app/main/default/objects/Account/fields/IFv2_IntroducedOn2__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IntroducedOn2__c</fullName>
    <label>Introduced On 2</label>
    <type>Date</type>
</CustomField>