force-app/main/default/objects/Account/fields/IFv2_IntroducedOn3__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IntroducedOn3__c</fullName>
    <label>Introduced On 3</label>
    <type>Date</type>
</CustomField>