force-app/main/default/objects/Account/fields/IFv2_IntroducedOn4__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IntroducedOn4__c</fullName>
    <label>Introduced On 4</label>
    <type>Date</type>
</CustomField>