force-app/main/default/objects/Account/fields/IFv2_InventoryNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InventoryNumber__c</fullName>
    <label>Inventory Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>