force-app/main/default/objects/Account/fields/IFv2_InvoiceDateDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoiceDateDocumentDate__c</fullName>
    <description>Used in APM Workflow</description>
    <label>Invoice Date (Document Date)</label>
    <length>20</length>
    <type>Text</type>
</CustomField>