force-app/main/default/objects/Account/fields/IFv2_InvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoiceNumber__c</fullName>
    <description>Invoice number (FI document number).</description>
    <inlineHelpText>Invoice number (FI document number)</inlineHelpText>
    <label>Invoice Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>