force-app/main/default/objects/Account/fields/IFv2_InvoiceQuantity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoiceQuantity__c</fullName>
    <inlineHelpText>SAP Invoice quantity</inlineHelpText>
    <label>Invoice Quantity</label>
    <length>14</length>
    <type>Text</type>
</CustomField>