force-app/main/default/objects/Account/fields/IFv2_InvoiceTypeDocumentType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoiceTypeDocumentType__c</fullName>
    <description>Used in APM Workflows</description>
    <label>Invoice Type / Document Type</label>
    <length>2</length>
    <type>Text</type>
</CustomField>