force-app/main/default/objects/Account/fields/IFv2_InvoiceUnitofMeasure__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoiceUnitofMeasure__c</fullName>
    <label>Invoice Unit of Measure</label>
    <length>13</length>
    <type>Text</type>
</CustomField>