force-app/main/default/objects/Account/fields/IFv2_InvoicingPartyvendorname__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoicingPartyvendorname__c</fullName>
    <description>This field is used in APM Workflows.</description>
    <label>Invoicing Party (vendor name)</label>
    <length>35</length>
    <type>Text</type>
</CustomField>