force-app/main/default/objects/Account/fields/IFv2_InvoicingPartyvendornumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_InvoicingPartyvendornumber__c</fullName>
    <description>This field is used in APM Workflows.</description>
    <label>Invoicing Party (vendor number)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>