force-app/main/default/objects/Account/fields/IFv2_IsArchived__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IsArchived__c</fullName>
    <defaultValue>&quot;N&quot;</defaultValue>
    <description>This field is APM workflows</description>
    <label>IsArchived</label>
    <length>1</length>
    <type>Text</type>
</CustomField>