force-app/main/default/objects/Account/fields/IFv2_IsValidated__c.field-meta.xml
<CustomField>
    <fullName>IFv2_IsValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isValidated - concession validation result</description>
    <label>Is Validated</label>
    <type>Checkbox</type>
</CustomField>