force-app/main/default/objects/Account/fields/IFv2_ItemText__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ItemText__c</fullName>
    <label>Item Text</label>
    <length>40</length>
    <type>Text</type>
</CustomField>