force-app/main/default/objects/Account/fields/IFv2_JobDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_JobDescription__c</fullName>
    <label>Job Description</label>
    <type>TextArea</type>
</CustomField>