force-app/main/default/objects/Account/fields/IFv2_JobTitleShortDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_JobTitleShortDescription__c</fullName>
    <label>Job Title short description</label>
    <type>TextArea</type>
</CustomField>