force-app/main/default/objects/Account/fields/IFv2_JustificationfortheRequirement__c.field-meta.xml
<CustomField>
    <fullName>IFv2_JustificationfortheRequirement__c</fullName>
    <label>Justification for the requirement</label>
    <type>TextArea</type>
</CustomField>