force-app/main/default/objects/Account/fields/IFv2_LeaveType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LeaveType__c</fullName>
    <description>Used for Leave and Overtime</description>
    <inlineHelpText>Please select the type of leave</inlineHelpText>
    <label>Leave Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Leave</fullName>
            </value>
            <value>
                <fullName>Compensated Leave</fullName>
            </value>
            <value>
                <fullName>Marriage Leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Pregnancy Medical Check-up</fullName>
            </value>
            <value>
                <fullName>Nursing Leave</fullName>
            </value>
            <value>
                <fullName>Family-planning Leave</fullName>
            </value>
            <value>
                <fullName>On-job Injury Leave</fullName>
            </value>
            <value>
                <fullName>Bereavement Leave</fullName>
            </value>
            <value>
                <fullName>Unpaid Leave</fullName>
            </value>
            <value>
                <fullName>Business Leave</fullName>
            </value>
            <value>
                <fullName>Sick Leave Deduction 30%</fullName>
            </value>
            <value>
                <fullName>Sick Leave Partial Pay</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>