force-app/main/default/objects/Account/fields/IFv2_LegacyActualApprover__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LegacyActualApprover__c</fullName>
    <label>Actual Approver</label>
    <length>255</length>
    <type>Text</type>
</CustomField>