force-app/main/default/objects/Account/fields/IFv2_LegacyAssignedTo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LegacyAssignedTo__c</fullName>
    <label>Assigned To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>