force-app/main/default/objects/Account/fields/IFv2_LegacyComments__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LegacyComments__c</fullName>
    <description>Old Request Approval Comments</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>