force-app/main/default/objects/Account/fields/IFv2_LegacyStatus__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LegacyStatus__c</fullName>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>