force-app/main/default/objects/Account/fields/IFv2_Legacysubmitter__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Legacysubmitter__c</fullName>
    <label>Submitter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>