force-app/main/default/objects/Account/fields/IFv2_LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_LegalEntity__c</fullName>
    <label>Legal Entity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>