force-app/main/default/objects/Account/fields/IFv2_Limitedtothefollowingquantity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Limitedtothefollowingquantity__c</fullName>
    <description>Used in concession Workflow</description>
    <inlineHelpText>Concession is limited to the following quantity. Enter 10 numbers max.</inlineHelpText>
    <label>Limited to the following quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>