force-app/main/default/objects/Account/fields/IFv2_Location__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Location__c</fullName>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>