force-app/main/default/objects/Account/fields/IFv2_MaterialDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_MaterialDescription__c</fullName>
    <label>Material Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>