force-app/main/default/objects/Account/fields/IFv2_MaterialName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_MaterialName__c</fullName>
    <label>Material Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>