force-app/main/default/objects/Account/fields/IFv2_MaterialNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_MaterialNumber__c</fullName>
    <label>Material No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>