force-app/main/default/objects/Account/fields/IFv2_Message__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Message__c</fullName>
    <label>Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>