force-app/main/default/objects/Account/fields/IFv2_Name__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Name__c</fullName>
    <description>Used in Employee related list</description>
    <displayFormat>ID-{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>