force-app/main/default/objects/Account/fields/IFv2_NetBookValueatPlannedMonth__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NetBookValueatPlannedMonth__c</fullName>
    <label>Net Book Value at Planned Month</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>