force-app/main/default/objects/Account/fields/IFv2_NewAssetNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewAssetNumber__c</fullName>
    <label>New Asset Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>