force-app/main/default/objects/Account/fields/IFv2_NewDescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewDescription__c</fullName>
    <label>New Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>