force-app/main/default/objects/Account/fields/IFv2_NewLocation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewLocation__c</fullName>
    <label>New Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>