force-app/main/default/objects/Account/fields/IFv2_NewNetBookValue__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewNetBookValue__c</fullName>
    <label>New Net Book Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>