force-app/main/default/objects/Account/fields/IFv2_NewOriginalValue__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewOriginalValue__c</fullName>
    <label>New Original Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>