force-app/main/default/objects/Account/fields/IFv2_NewSubNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NewSubNumber__c</fullName>
    <label>New Sub Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>