force-app/main/default/objects/Account/fields/IFv2_Nominated_LEX2__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Nominated_LEX2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nominated LEX</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NominatedLex</relationshipName>
    <type>Lookup</type>
</CustomField>