force-app/main/default/objects/Account/fields/IFv2_Noreasonwhynot__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Noreasonwhynot__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in Concession Workflow</description>
    <label>No, reason why not</label>
    <type>Checkbox</type>
</CustomField>