force-app/main/default/objects/Account/fields/IFv2_NotificationNo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NotificationNo__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Notification No.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>