force-app/main/default/objects/Account/fields/IFv2_NumberOfDaysOverdue__c.field-meta.xml
<CustomField>
    <fullName>IFv2_NumberOfDaysOverdue__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days Overdue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>