force-app/main/default/objects/Account/fields/IFv2_OcupancyType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OcupancyType__c</fullName>
    <label>Ocupancy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>internal</fullName>
            </value>
            <value>
                <fullName>external</fullName>
            </value>
            <value>
                <fullName>internal OR external</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>