force-app/main/default/objects/Account/fields/IFv2_OldAssetNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OldAssetNumber__c</fullName>
    <label>Old Asset Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>