force-app/main/default/objects/Account/fields/IFv2_OldInventoryNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OldInventoryNumber__c</fullName>
    <label>Old Inventory Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>