force-app/main/default/objects/Account/fields/IFv2_OldSubNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OldSubNumber__c</fullName>
    <label>Old Sub Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>