force-app/main/default/objects/Account/fields/IFv2_OrderQuantity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OrderQuantity__c</fullName>
    <inlineHelpText>SAP order quantity</inlineHelpText>
    <label>Order Quantity</label>
    <length>13</length>
    <type>Text</type>
</CustomField>