force-app/main/default/objects/Account/fields/IFv2_OrganisationalUnit__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OrganisationalUnit__c</fullName>
    <description>Used in Personnel request</description>
    <inlineHelpText>Please enter the organisational unit / mandatory field</inlineHelpText>
    <label>Organisational Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>