force-app/main/default/objects/Account/fields/IFv2_OrgUnit__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OrgUnit__c</fullName>
    <formula>IFv2_PersonnelNo__r.Org_Unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Unit</label>
    <type>Text</type>
</CustomField>