force-app/main/default/objects/Account/fields/IFv2_OriginalValue__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OriginalValue__c</fullName>
    <label>Original Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>