force-app/main/default/objects/Account/fields/IFv2_OvertimeType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_OvertimeType__c</fullName>
    <description>Used in China Leave and overtime request</description>
    <label>Overtime Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OT on working day</fullName>
            </value>
            <value>
                <fullName>OT on off day</fullName>
            </value>
            <value>
                <fullName>OT on public holiday</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>