force-app/main/default/objects/Account/fields/IFv2_PartNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PartNumber__c</fullName>
    <inlineHelpText>Enter the part number</inlineHelpText>
    <label>Part Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>