force-app/main/default/objects/Account/fields/IFv2_PersonnelNo__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PersonnelNo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to all Employees (Used in employee related list)</description>
    <inlineHelpText>Please select the Employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Account</relationshipLabel>
    <relationshipName>Account</relationshipName>
    <type>Lookup</type>
</CustomField>