force-app/main/default/objects/Account/fields/IFv2_PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PersonnelNumber__c</fullName>
    <formula>IFv2_PersonnelNo__r.Personnel_NumberText__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Personnel Number</label>
    <type>Text</type>
</CustomField>