force-app/main/default/objects/Account/fields/IFv2_PersontobeReplaced__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PersontobeReplaced__c</fullName>
    <description>Used in personnel request.</description>
    <inlineHelpText>Please enter the person to be replaced</inlineHelpText>
    <label>Person to be replaced</label>
    <length>255</length>
    <type>Text</type>
</CustomField>