force-app/main/default/objects/Account/fields/IFv2_PEX_Name__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PEX_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PEX Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>PexName</relationshipName>
    <type>Lookup</type>
</CustomField>