force-app/main/default/objects/Account/fields/IFv2_PhysicalLocation__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PhysicalLocation__c</fullName>
    <label>Physical Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>