force-app/main/default/objects/Account/fields/IFv2_PlannedDuration__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PlannedDuration__c</fullName>
    <description>This is used to in China Travel Application for calculating number of planned days.</description>
    <formula>IFv2_ToDate__c - IFv2_FromDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>