force-app/main/default/objects/Account/fields/IFv2_Plant__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Plant__c</fullName>
    <label>Plant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>