force-app/main/default/objects/Account/fields/IFv2_PlantName__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PlantName__c</fullName>
    <label>Plant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>