force-app/main/default/objects/Account/fields/IFv2_PlantSAP__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PlantSAP__c</fullName>
    <description>Plant SAP</description>
    <inlineHelpText>Plant SAP</inlineHelpText>
    <label>Plant SAP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>