force-app/main/default/objects/Account/fields/IFv2_Position__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Position__c</fullName>
    <formula>IFv2_PersonnelNo__r.Position__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Position</label>
    <type>Text</type>
</CustomField>