force-app/main/default/objects/Account/fields/IFv2_PostingDate__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PostingDate__c</fullName>
    <inlineHelpText>SAP Posting date</inlineHelpText>
    <label>Posting Date</label>
    <length>20</length>
    <type>Text</type>
</CustomField>