force-app/main/default/objects/Account/fields/IFv2_Process__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Process__c</fullName>
    <description>Used in Concession Workflow</description>
    <label>Process</label>
    <length>40</length>
    <type>Text</type>
</CustomField>