force-app/main/default/objects/Account/fields/IFv2_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Product_Type__c</fullName>
    <description>Used in DVP Workflow</description>
    <inlineHelpText>Please select the prodcut type</inlineHelpText>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Starter motor</fullName>
            </value>
            <value>
                <fullName>Alternator</fullName>
            </value>
            <value>
                <fullName>BRM</fullName>
            </value>
            <value>
                <fullName>EM1.25</fullName>
            </value>
            <value>
                <fullName>EM1.150</fullName>
            </value>
            <value>
                <fullName>EM1.2</fullName>
            </value>
            <value>
                <fullName>Inverter</fullName>
            </value>
            <value>
                <fullName>Component</fullName>
            </value>
            <value>
                <fullName>VCU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>