force-app/main/default/objects/Account/fields/IFv2_ProfitCenter__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ProfitCenter__c</fullName>
    <description>Used in APM Workflows</description>
    <label>Profit Center</label>
    <length>10</length>
    <type>Text</type>
</CustomField>