force-app/main/default/objects/Account/fields/IFv2_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Project_ID__c</fullName>
    <description>Used in DVP workflow</description>
    <label>Project ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>