force-app/main/default/objects/Account/fields/IFv2_ProjectNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ProjectNumber__c</fullName>
    <label>Project Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>