force-app/main/default/objects/Account/fields/IFv2_ProjectTitle__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ProjectTitle__c</fullName>
    <label>Project Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>