force-app/main/default/objects/Account/fields/IFv2_Purchaseorderitems__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Purchaseorderitems__c</fullName>
    <description>This field id used in APM workflows.</description>
    <label>Purchase order item(s)</label>
    <length>5</length>
    <type>Text</type>
</CustomField>