force-app/main/default/objects/Account/fields/IFv2_PurchaseOrderNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PurchaseOrderNumber__c</fullName>
    <label>Purchase Order Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>