force-app/main/default/objects/Account/fields/IFv2_PurchasingOrganization__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PurchasingOrganization__c</fullName>
    <description>Used in APM Workflow</description>
    <inlineHelpText>SAP Purchasing organization</inlineHelpText>
    <label>Purchasing Organization</label>
    <length>20</length>
    <type>Text</type>
</CustomField>