force-app/main/default/objects/Account/fields/IFv2_PVbetweenPOitemandInvoiceitem__c.field-meta.xml
<CustomField>
    <fullName>IFv2_PVbetweenPOitemandInvoiceitem__c</fullName>
    <label>PV between PO item and Invoice item</label>
    <length>2</length>
    <type>Text</type>
</CustomField>