force-app/main/default/objects/Account/fields/IFv2_QINotifications__c.field-meta.xml
<CustomField>
    <fullName>IFv2_QINotifications__c</fullName>
    <description>This is used in Concession workflow.</description>
    <label>QI Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>