force-app/main/default/objects/Account/fields/IFv2_QSNotifications__c.field-meta.xml
<CustomField>
    <fullName>IFv2_QSNotifications__c</fullName>
    <description>This is used in Concession</description>
    <label>QS Notifications</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>