force-app/main/default/objects/Account/fields/IFv2_QuantitiesDeadlinedescription__c.field-meta.xml
<CustomField>
    <fullName>IFv2_QuantitiesDeadlinedescription__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>Date in Format YYYY-MM-DD and Max 8 only Characters allowed</inlineHelpText>
    <label>Dead line Date</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>