force-app/main/default/objects/Account/fields/IFv2_Quantity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Quantity__c</fullName>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>