force-app/main/default/objects/Account/fields/IFv2_QVbetweenPOitemandInvoiceitem__c.field-meta.xml
<CustomField>
    <fullName>IFv2_QVbetweenPOitemandInvoiceitem__c</fullName>
    <description>This field is used in APM workflows.</description>
    <label>QV between PO item and Invoice item</label>
    <length>2</length>
    <type>Text</type>
</CustomField>