force-app/main/default/objects/Account/fields/IFv2_Reliability__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Reliability__c</fullName>
    <description>Used in Concession workflow</description>
    <inlineHelpText>Maximum Characters Allowed - 132</inlineHelpText>
    <label>Reliability</label>
    <length>132</length>
    <type>Text</type>
</CustomField>