force-app/main/default/objects/Account/fields/IFv2_Remark__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Remark__c</fullName>
    <description>used in employee related list</description>
    <label>Remark</label>
    <length>32786</length>
    <type>LongTextArea</type>
</CustomField>