force-app/main/default/objects/Account/fields/IFv2_Request__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the IFv2_Request object</description>
    <label>Request Name</label>
    <referenceTo>IFv2_Request__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>