force-app/main/default/objects/Account/fields/IFv2_Requiredknowledge__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Requiredknowledge__c</fullName>
    <label>Required knowledge competen. and attrib.</label>
    <type>TextArea</type>
</CustomField>