force-app/main/default/objects/Account/fields/IFv2_RequirementiswithinApprovBusPlan__c.field-meta.xml
<CustomField>
    <fullName>IFv2_RequirementiswithinApprovBusPlan__c</fullName>
    <label>Requirement is within approv.bus.plan</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>