force-app/main/default/objects/Account/fields/IFv2_RequirementType__c.field-meta.xml
<CustomField>
    <fullName>IFv2_RequirementType__c</fullName>
    <label>Requirement Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Additional requirement</fullName>
            </value>
            <value>
                <fullName>Backup requirement</fullName>
            </value>
            <value>
                <fullName>Replacement requirement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>