force-app/main/default/objects/Account/fields/IFv2_Responsible3__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Responsible3__c</fullName>
    <label>Responsible 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>