force-app/main/default/objects/Account/fields/IFv2_Responsible4__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Responsible4__c</fullName>
    <label>Responsible 4</label>
    <length>10</length>
    <type>Text</type>
</CustomField>