force-app/main/default/objects/Account/fields/IFv2_Responsiblefortrackingthequantities__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Responsiblefortrackingthequantities__c</fullName>
    <description>Used in Concession Workflow</description>
    <inlineHelpText>Max 10 Characters allowed</inlineHelpText>
    <label>Responsible for tracking the quantities</label>
    <length>10</length>
    <type>Text</type>
</CustomField>