force-app/main/default/objects/Account/fields/IFv2_ReturnedQuantity__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ReturnedQuantity__c</fullName>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>