force-app/main/default/objects/Account/fields/IFv2_ReturnedUnit__c.field-meta.xml
<CustomField>
    <fullName>IFv2_ReturnedUnit__c</fullName>
    <label>Returned Unit</label>
    <length>15</length>
    <type>Text</type>
</CustomField>