force-app/main/default/objects/Account/fields/IFv2_RevisionLevel__c.field-meta.xml
<CustomField>
    <fullName>IFv2_RevisionLevel__c</fullName>
    <label>Revision Level</label>
    <length>2</length>
    <type>Text</type>
</CustomField>