force-app/main/default/objects/Account/fields/IFv2_Salaryscaleofthepost__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Salaryscaleofthepost__c</fullName>
    <label>Salary scale of the post</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>