force-app/main/default/objects/Account/fields/IFv2_SalesforceID__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SalesforceID__c</fullName>
    <description>Used in APM Workflows</description>
    <label>Salesforce ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>