force-app/main/default/objects/Account/fields/IFv2_Sample_Stage__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Sample_Stage__c</fullName>
    <description>used in DVP</description>
    <inlineHelpText>Please enter information with capital letters in &quot;X.XX&quot; format.</inlineHelpText>
    <label>Sample Stage</label>
    <length>5</length>
    <type>Text</type>
</CustomField>