force-app/main/default/objects/Account/fields/IFv2_SAPUPDATERESULT__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SAPUPDATERESULT__c</fullName>
    <label>SAP UPDATE RESULT</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>