force-app/main/default/objects/Account/fields/IFv2_SAPVendorCode__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SAPVendorCode__c</fullName>
    <label>SAP Vendor Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>