force-app/main/default/objects/Account/fields/IFv2_SEG_Part_Number__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SEG_Part_Number__c</fullName>
    <description>used in DVP workflow</description>
    <label>SEG Part Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>