force-app/main/default/objects/Account/fields/IFv2_Segment__c.field-meta.xml
<CustomField>
    <fullName>IFv2_Segment__c</fullName>
    <description>Used in DVP workflow</description>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PC</fullName>
            </value>
            <value>
                <fullName>CV</fullName>
            </value>
            <value>
                <fullName>LeM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>