force-app/main/default/objects/Account/fields/IFv2_SequenceNumber__c.field-meta.xml
<CustomField>
    <fullName>IFv2_SequenceNumber__c</fullName>
    <description>This is used in APM workflows, for sending status of request.</description>
    <label>Sequence Number</label>
    <length>2</length>
    <type>Text</type>
</CustomField>